# dukatools

./: DEV.md  README.md  pyproject.toml
src/dukatools/: dirproc.py  pydown.py  treex.py  vidcut.py
src/swissknife/: dirproc.py
