[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dukatools"
version = "0.1.1"
description = "Small cross-platform CLI toolbelt: treex, dirproc, and more."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "rexologue"}]
keywords = ["cli", "utilities", "filesystem", "tree"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["chardet>=5,<6"]

# Здесь «магия» команд:
[project.scripts]
treex = "dukatools.treex:main"
dirproc = "dukatools.dirproc:main"

[project.urls]
Homepage = "https://github.com/<your-user>/dukatools"
Issues = "https://github.com/<your-user>/dukatools/issues"
